# KengaCad

./: .editorconfig  .gitignore  KengaCAD.slnx  LICENSE.txt  README.md  build_all_installers.ps1  build_crossplatform.ps1  build_installer_professional.bat  build_installer_professional.ps1  run_agent.ps1
_legacy/: KengaCAD.spec  KengaCAD_Branded.iss  KengaCAD_Full.spec  KengaCAD_Installer.spec  KengaCAD_Simple.spec  KengaCAD_Simple_Standalone.spec  Product.wxs  README.txt  build_branded_installer.bat  build_csharp.bat  build_deb_package.sh  build_full_installer.bat  build_installer.bat  build_msi.bat  build_rpm_package.sh  create_installer_exe.py  create_msi_installer.bat  create_portable_installer.py  create_portable_zip.bat  create_standalone_app.py  file_list.txt  final_test.py  generate_wix_components.py  install_engine.bat  installer_gui.py  kengacad_app.py  main.py  main_simple.py  main_simple_build.py  main_simple_standalone.py  prepare_final_installers.bat  pyproject.toml  requirements.txt  run_api_example.bat  run_engine.bat  run_kengacad.bat  setup_complete.bat  setup_logo.py  simple_installer.py  simplified_main.py  (+4 more)
_legacy/cad/: __init__.py  advanced_trajectory.py  collision.py  dwg_setup.py  gdt.py  import_export.py  kinematics.py  opcua_client.py  plc_signals.py  program_export.py  robot_kinematics.py  robot_link.py  step_import.py  trajectory.py  virtual_commissioning.py
_legacy/config/: default_robot.json  postprocessors.json  settings.json
_legacy/docs/: ADVANCED_FEATURES.md  API_DOCS.md  ARCHITECTURE.md  AUTOCAD.md  AUTOCAD_AUDIT.md  COMMANDS.md  (+21 more)
(+148 files in other folders)
